@@ -1,3 +1,10 @@
+SBuild Eclipse Plugin trunk
+
+* Minimal requires SBuild version is now SBuild 0.4.0.
+* Fixed API incompatibilities.
+* Workspace resolution configuration with regular expressions now supports
+  substution based on matched groups.
+
 SBuild Eclispe Plugin 0.3.0 - 2013-01-06
 
 * Switched to Scala 2.10.
